feat; add docs for listOpening
